Remove deprecated debugging endpoints and doc fixups
